bus_df tests working for paired now

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -733,34 +733,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Columns must be same length as key",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mSeries([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(extracted_df[col]\u001b[38;5;241m.\u001b[39mdropna()\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)) \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m extracted_df\u001b[38;5;241m.\u001b[39mcolumns])\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Apply the function\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnucleotide_positions\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mactual_variant\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvariant\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(extract_each)\n",
-      "File \u001b[0;32m~/miniconda3/envs/varseek/lib/python3.10/site-packages/pandas/core/frame.py:3968\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3966\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setitem_frame(key, value)\n\u001b[1;32m   3967\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, (Series, np\u001b[38;5;241m.\u001b[39mndarray, \u001b[38;5;28mlist\u001b[39m, Index)):\n\u001b[0;32m-> 3968\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_setitem_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3969\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, DataFrame):\n\u001b[1;32m   3970\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_item_frame_value(key, value)\n",
-      "File \u001b[0;32m~/miniconda3/envs/varseek/lib/python3.10/site-packages/pandas/core/frame.py:4010\u001b[0m, in \u001b[0;36mDataFrame._setitem_array\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4005\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   4006\u001b[0m     \u001b[38;5;66;03m# Note: unlike self.iloc[:, indexer] = value, this will\u001b[39;00m\n\u001b[1;32m   4007\u001b[0m     \u001b[38;5;66;03m#  never try to overwrite values inplace\u001b[39;00m\n\u001b[1;32m   4009\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, DataFrame):\n\u001b[0;32m-> 4010\u001b[0m         \u001b[43mcheck_key_length\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4011\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k1, k2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(key, value\u001b[38;5;241m.\u001b[39mcolumns):\n\u001b[1;32m   4012\u001b[0m             \u001b[38;5;28mself\u001b[39m[k1] \u001b[38;5;241m=\u001b[39m value[k2]\n",
-      "File \u001b[0;32m~/miniconda3/envs/varseek/lib/python3.10/site-packages/pandas/core/indexers/utils.py:401\u001b[0m, in \u001b[0;36mcheck_key_length\u001b[0;34m(columns, key, value)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m columns\u001b[38;5;241m.\u001b[39mis_unique:\n\u001b[1;32m    400\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(value\u001b[38;5;241m.\u001b[39mcolumns) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(key):\n\u001b[0;32m--> 401\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumns must be same length as key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    402\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    403\u001b[0m     \u001b[38;5;66;03m# Missing keys in columns are represented as -1\u001b[39;00m\n\u001b[1;32m    404\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(columns\u001b[38;5;241m.\u001b[39mget_indexer_non_unique(key)[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(value\u001b[38;5;241m.\u001b[39mcolumns):\n",
-      "\u001b[0;31mValueError\u001b[0m: Columns must be same length as key"
-     ]
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "variant",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "nucleotide_positions",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "actual_variant",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "0eab8af6-4dcc-4922-b9a7-f61bb3a8ac94",
+       "rows": [
+        [
+         "0",
+         "c.123A>T;c.456G>C",
+         "123;456",
+         "A>T;G>C"
+        ],
+        [
+         "1",
+         "c.789C>G",
+         "789",
+         "C>G"
+        ],
+        [
+         "2",
+         "c.789C>G;c.1011_1012del",
+         "789;1011_1012",
+         "C>G;del"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variant</th>\n",
+       "      <th>nucleotide_positions</th>\n",
+       "      <th>actual_variant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>c.123A&gt;T;c.456G&gt;C</td>\n",
+       "      <td>123;456</td>\n",
+       "      <td>A&gt;T;G&gt;C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c.789C&gt;G</td>\n",
+       "      <td>789</td>\n",
+       "      <td>C&gt;G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c.789C&gt;G;c.1011_1012del</td>\n",
+       "      <td>789;1011_1012</td>\n",
+       "      <td>C&gt;G;del</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   variant nucleotide_positions actual_variant\n",
+       "0        c.123A>T;c.456G>C              123;456        A>T;G>C\n",
+       "1                 c.789C>G                  789            C>G\n",
+       "2  c.789C>G;c.1011_1012del        789;1011_1012        C>G;del"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame({\"variant\": [\"c.123A>T;c.456G>C\", \"c.789C>G\"]})\n",
+    "df = pd.DataFrame({\"variant\": [\"c.123A>T;c.456G>C\", \"c.777C>G\",  \"c.789C>G;c.1011_1012del\"]})\n",
     "\n",
     "# Example mutation pattern (modify as needed)\n",
     "mutation_pattern = r\"(?:c|g)\\.([0-9_\\-\\+\\*\\(\\)\\?]+)([a-zA-Z>]+)\"  # more complex: r'c\\.([0-9_\\-\\+\\*\\(\\)\\?]+)([a-zA-Z>\\(\\)0-9]+)'\n",
     "\n",
     "# Function to apply extraction to each semicolon-separated part\n",
-    "def extract_each(variant):\n",
+    "def extract_nucleotide_positions_and_actual_variant(variant):\n",
     "    if pd.isna(variant):\n",
     "        return pd.Series([None, None])\n",
     "    \n",
@@ -771,7 +867,122 @@
     "    return pd.Series([\";\".join(extracted_df[col].dropna().astype(str)) for col in extracted_df.columns])\n",
     "\n",
     "# Apply the function\n",
-    "df[[\"nucleotide_positions\", \"actual_variant\"]] = df[\"variant\"].apply(extract_each)\n"
+    "df[[\"nucleotide_positions\", \"actual_variant\"]] = df[\"variant\"].apply(extract_nucleotide_positions_and_actual_variant)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "e7b5365d-66db-408d-b17a-24febd09eed9",
+       "rows": [
+        [
+         "0",
+         "0",
+         "ENST1:c.123A>T;ENST1:c.456G>C"
+        ],
+        [
+         "1",
+         "2",
+         "ENST1:c.789C>G"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>vcrs_header</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ENST1:c.123A&gt;T;ENST1:c.456G&gt;C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ENST1:c.789C&gt;G</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                    vcrs_header\n",
+       "0      0  ENST1:c.123A>T;ENST1:c.456G>C\n",
+       "1      2                 ENST1:c.789C>G"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"vcrs_header\": [\"ENST1:c.123A>T;ENST1:c.456G>C\", \"ENST1:c.777C>G\",  \"ENST1:c.789C>G;ENST1:c.1011_1012del\"]})\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "df = pd.DataFrame({\"vcrs_header\": [\"ENST1:c.123A>T;ENST1:c.456G>C\", \"ENST1:c.777C>G\", \"ENST1:c.789C>G;ENST1:c.1011_1012del\"]})\n",
+    "\n",
+    "# Step 1: Explode across semicolons\n",
+    "df_exploded = df.assign(vcrs_header=df[\"vcrs_header\"].str.split(\";\")).explode(\"vcrs_header\")\n",
+    "\n",
+    "# Step 2: Apply filtering (example: remove rows containing \"del\")\n",
+    "df_exploded = df_exploded[~df_exploded[\"vcrs_header\"].str.contains(\"del\", na=False)]\n",
+    "df_exploded = df_exploded.drop(index=1)  # drop the 2nd row\n",
+    "\n",
+    "# Step 3: Collapse back, sorting alphabetically\n",
+    "df_collapsed = df_exploded.groupby(df_exploded.index)[\"vcrs_header\"].apply(lambda x: \";\".join(sorted(x))).reset_index()\n",
+    "\n",
+    "df_collapsed"
    ]
   }
  ],
