bus df function seems to be working

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -11,6 +11,7 @@
     "import shutil\n",
     "import sys\n",
     "import numpy as np\n",
+    "import anndata as ad\n",
     "import pandas as pd\n",
     "from varseek.utils import create_identity_t2g\n",
     "\n",
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,54 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2025-03-27 16:55:25,618]    INFO [ref_custom] Indexing /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/ref_sc_test.fa to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/index_test.idx\n",
-      "[2025-03-27 16:55:26,942]    INFO [ref_custom] Finished creating custom index\n",
-      "[2025-03-27 16:55:32,335]    INFO [count] Using index /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/index_test.idx to generate BUS file to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1 from\n",
-      "[2025-03-27 16:55:32,335]    INFO [count]         /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/reads_R1.fq\n",
-      "[2025-03-27 16:55:32,335]    INFO [count]         /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/reads_R2.fq\n",
-      "[2025-03-27 16:55:33,446]    INFO [count] Sorting BUS file /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/output.bus to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/tmp/output.s.bus\n",
-      "[2025-03-27 16:55:35,285]    INFO [count] On-list not provided\n",
-      "[2025-03-27 16:55:35,285]    INFO [count] Copying pre-packaged 10XV3 on-list to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1\n",
-      "[2025-03-27 16:55:35,552]    INFO [count] Inspecting BUS file /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/tmp/output.s.bus\n",
-      "[2025-03-27 16:55:40,346]    INFO [count] Correcting BUS records in /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/tmp/output.s.bus to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/tmp/output.s.c.bus with on-list /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/10x_version3_whitelist.txt\n",
-      "[2025-03-27 16:55:48,528]    INFO [count] Sorting BUS file /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/tmp/output.s.c.bus to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/output.unfiltered.bus\n",
-      "[2025-03-27 16:55:50,261]    INFO [count] Generating count matrix /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/counts_unfiltered/cells_x_genes from BUS file /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/output.unfiltered.bus\n",
-      "[2025-03-27 16:55:51,394]    INFO [count] Writing gene names to file /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/counts_unfiltered/cells_x_genes.genes.names.txt\n",
-      "[2025-03-27 16:55:51,395] WARNING [count] 6 gene IDs do not have corresponding valid gene names. These genes will use their gene IDs instead.\n",
-      "[2025-03-27 16:55:51,396]    INFO [count] Reading matrix /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/counts_unfiltered/cells_x_genes.mtx\n",
-      "[2025-03-27 16:55:51,410]    INFO [count] Writing matrix to h5ad /Users/joeyrich/Desktop/local/varseek/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1/counts_unfiltered/adata.h5ad\n",
-      "Read in 11 BUS records\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AAACCCAAGAAACACT\tTTTTTTTTTTTT\t0\t1\t0\n",
-      "AAACCCAAGAAACACT\tTTTTTTTTTTTT\t0\t1\t1\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTTTT\t0\t1\t2\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTTTT\t1\t1\t3\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTTTA\t1\t1\t4\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTTTG\t2\t1\t5\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTTCC\t3\t1\t6\n",
-      "TATCAGGAGCTAAGTG\tTTTTTTTTTAAA\t3\t1\t7\n",
-      "GAACCCAAGAAACACT\tTTTTTTTTAACA\t0\t1\t8\n",
-      "AAACCCAAGAAACACT\tTTTTTTAAAAAA\t2\t1\t9\n",
-      "AAACCCAAGAAACACT\tTTTTTTAAAAAA\t4\t1\t10\n",
-      "Count matrix:  [[3.       0.       0.       0.       0.       0.      ]\n",
-      " [1.5      2.5      0.666667 0.666667 0.666667 0.      ]]\n",
-      "adata.var:  Index(['vcrs1', 'vcrs2', 'vcrs3', 'vcrs4', 'vcrs5', 'vcrs6'], dtype='object', name='gene_id')\n",
-      "adata.obs:  Index(['AAACCCAAGAAACACT', 'TATCAGGAGCTAAGTG'], dtype='object', name='barcode')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mm = True\n",
     "union = True\n",
@@ -357,7 +313,7 @@
     "read2_fq = f\"{varseek_directory}/tests/kb_files/single_cell_tests/reads_R2.fq\"\n",
     "test_index = f\"{varseek_directory}/tests/kb_files/single_cell_tests/index_test.idx\"\n",
     "test_t2g = f\"{varseek_directory}/tests/kb_files/single_cell_tests/t2g_test.txt\"\n",
-    "kb_count_out_test = f\"{varseek_directory}/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1\"\n",
+    "kb_count_out_test = f\"{varseek_directory}/tests/kb_files/single_cell_tests/test_kb_count_out_hamming1_mm_and_union\"\n",
     "\n",
     "rnaseq_fastq_files_final = [read1_fq, read2_fq]\n",
     "os.makedirs(kb_count_out_test, exist_ok=True)\n",
