made some modifications to normal genome function so that bulk is nearly working for paired; also, fixed a crucial bug for vk sim

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -270,7 +270,7 @@
     "import varseek.utils.seq_utils\n",
     "importlib.reload(varseek.utils.varseek_clean_utils)\n",
     "from varseek.utils.varseek_clean_utils import make_bus_df\n",
-    "df = make_bus_df(kb_count_out=kb_count_out_test_4_total_fastqs_paired, fastq_file_list=rnaseq_fastq_files_final, t2g_file=test_t2g, mm=False, technology=\"bulk\", parity=\"paired\", bustools=bustools, check_only=True)"
+    "df = make_bus_df(kb_count_out=kb_count_out_test_4_total_fastqs_paired, fastq_file_list=rnaseq_fastq_files_final, t2g_file=test_t2g, mm=False, technology=\"bulk\", parity=\"paired\", bustools=bustools, fastq_sorting_check_only=True)"
    ]
   },
   {
