--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -947,6 +947,497 @@
     "5519660 vs 94632\n",
     "249250621 vs 109224"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "gene",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_header",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "other_info",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "0a7bae84-4720-48f0-aced-4d77f686137e",
+       "rows": [
+        [
+         "0",
+         "GeneA",
+         "VAR1;VAR2",
+         "42"
+        ],
+        [
+         "1",
+         "GeneB",
+         "VAR3",
+         "99"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gene</th>\n",
+       "      <th>vcrs_header</th>\n",
+       "      <th>other_info</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GeneA</td>\n",
+       "      <td>VAR1;VAR2</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GeneB</td>\n",
+       "      <td>VAR3</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    gene vcrs_header  other_info\n",
+       "0  GeneA   VAR1;VAR2          42\n",
+       "1  GeneB        VAR3          99"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Simulate adata.var-like DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'gene': ['GeneA', 'GeneB'],\n",
+    "    'vcrs_header': ['VAR1;VAR2', 'VAR3'],\n",
+    "    'other_info': [42, 99]\n",
+    "})\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "gene",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_header",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "other_info",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header_list",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "8579b5c2-b398-441b-8ccd-b7f6e83d0d45",
+       "rows": [
+        [
+         "0",
+         "GeneA",
+         "VAR1;VAR2",
+         "42",
+         "['VAR1', 'VAR2']"
+        ],
+        [
+         "1",
+         "GeneB",
+         "VAR3",
+         "99",
+         "['VAR3']"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gene</th>\n",
+       "      <th>vcrs_header</th>\n",
+       "      <th>other_info</th>\n",
+       "      <th>vcrs_header_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GeneA</td>\n",
+       "      <td>VAR1;VAR2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>[VAR1, VAR2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GeneB</td>\n",
+       "      <td>VAR3</td>\n",
+       "      <td>99</td>\n",
+       "      <td>[VAR3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    gene vcrs_header  other_info vcrs_header_list\n",
+       "0  GeneA   VAR1;VAR2          42     [VAR1, VAR2]\n",
+       "1  GeneB        VAR3          99           [VAR3]"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exploded = df.copy()\n",
+    "exploded['vcrs_header_list'] = exploded['vcrs_header'].str.split(';')\n",
+    "exploded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "gene",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_header",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "other_info",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header_list",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "809191fb-0c40-44d9-967e-789d905258a3",
+       "rows": [
+        [
+         "0",
+         "GeneA",
+         "VAR1;VAR2",
+         "42",
+         "VAR1"
+        ],
+        [
+         "0",
+         "GeneA",
+         "VAR1;VAR2",
+         "42",
+         "VAR2"
+        ],
+        [
+         "1",
+         "GeneB",
+         "VAR3",
+         "99",
+         "VAR3"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gene</th>\n",
+       "      <th>vcrs_header</th>\n",
+       "      <th>other_info</th>\n",
+       "      <th>vcrs_header_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GeneA</td>\n",
+       "      <td>VAR1;VAR2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>VAR1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GeneA</td>\n",
+       "      <td>VAR1;VAR2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>VAR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GeneB</td>\n",
+       "      <td>VAR3</td>\n",
+       "      <td>99</td>\n",
+       "      <td>VAR3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    gene vcrs_header  other_info vcrs_header_list\n",
+       "0  GeneA   VAR1;VAR2          42             VAR1\n",
+       "0  GeneA   VAR1;VAR2          42             VAR2\n",
+       "1  GeneB        VAR3          99             VAR3"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exploded = exploded.explode('vcrs_header_list')\n",
+    "exploded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "gene",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "other_info",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header_list",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "9c59cdea-fbe5-4589-a817-49a85e4c7237",
+       "rows": [
+        [
+         "0",
+         "VAR1;VAR2",
+         "GeneA",
+         "42",
+         "['VAR1', 'VAR2']"
+        ],
+        [
+         "1",
+         "VAR3",
+         "GeneB",
+         "99",
+         "['VAR3']"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vcrs_header</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>other_info</th>\n",
+       "      <th>vcrs_header_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VAR1;VAR2</td>\n",
+       "      <td>GeneA</td>\n",
+       "      <td>42</td>\n",
+       "      <td>[VAR1, VAR2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>VAR3</td>\n",
+       "      <td>GeneB</td>\n",
+       "      <td>99</td>\n",
+       "      <td>[VAR3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  vcrs_header   gene  other_info vcrs_header_list\n",
+       "0   VAR1;VAR2  GeneA          42     [VAR1, VAR2]\n",
+       "1        VAR3  GeneB          99           [VAR3]"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = (\n",
+    "    exploded.groupby(\"vcrs_header\", as_index=False)\n",
+    "    .agg({**{col: \"first\" for col in exploded.columns if col not in [\"vcrs_header\"]}})\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "grouped['vcrs_header_list'] = grouped['vcrs_header'].str.split(';')\n",
+    "grouped"
+   ]
   }
  ],
  "metadata": {
